; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/sockets/unix_bindconnect/extr_unix_bindconnect.c_push_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/sockets/unix_bindconnect/extr_unix_bindconnect.c_push_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@unwind_len = common dso_local global i64 0, align 8
@UNWIND_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"push_path: one path too many (%s)\00", align 1
@unwind_list = common dso_local global %struct.TYPE_2__* null, align 8
@PATH_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @push_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @unwind_len, align 8
  %4 = load i64, i64* @UNWIND_MAX, align 8
  %5 = icmp uge i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @err(i32 -1, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @unwind_list, align 8
  %11 = load i64, i64* @unwind_len, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i32, i32* @PATH_MAX, align 4
  %17 = call i32 @strlcpy(i32 %14, i8* %15, i32 %16)
  %18 = load i64, i64* @unwind_len, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* @unwind_len, align 8
  ret void
}

declare dso_local i32 @err(i32, i8*, i8*) #1

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
